src/iptablesConverter/iptables/ip6tables.rules
############################################################################## FILTER #
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT DROP

:LOGNDROPIN  -
:LOGNDROPOUT -
:LOGNDROPFWD -

#--------------------------------------------------------------------------------- INPUT
-A INPUT -p icmpv6 -m limit --limit 30/min -j LOG --log-prefix "IN ICMP6: " --log-level 7
-A INPUT -p tcp    -m limit --limit 30/min -j LOG --log-prefix "IN TCP6: "  --log-level 7
-A INPUT -p udp    -m limit --limit 30/min -j LOG --log-prefix "IN UDP6: "  --log-level 7

# Allow localhost traffic
-A INPUT -i lo -d ::1/128 -j ACCEPT
-A INPUT -s ::1 -d ::1 -j ACCEPT

# Allow some ICMPv6 types in the INPUT chain
# Using ICMPv6 type names to be clear.
-A INPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type packet-too-big          -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type time-exceeded           -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type parameter-problem       -j ACCEPT

# Allow some other types in the INPUT chain, but rate limit.
-A INPUT -p icmpv6 --icmpv6-type echo-request -s 0/0 -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type echo-request        -m limit --limit 900/min                 -j ACCEPT

-A INPUT -p icmpv6 --icmpv6-type echo-reply   -s 0/0 -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type echo-reply          -m limit --limit 900/min                 -j ACCEPT

# Allow others ICMPv6 types but only if the hop limit (hl) field is 255.
-A INPUT -p icmpv6 --icmpv6-type router-advertisement   -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-solicitation  -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type neighbor-advertisement -m hl --hl-eq 255 -j ACCEPT
-A INPUT -p icmpv6 --icmpv6-type redirect               -m hl --hl-eq 255 -j ACCEPT

# Allow only link-locals to multicast to ff02 address
-A INPUT -p udp -s fe80::/10              -d ff02::/8 --sport mdns --dport mdns -j ACCEPT
-A INPUT -p udp -s 2001:470:b8be::/48     -d ff02::/8 --sport mdns --dport mdns -j ACCEPT
-A INPUT -p udp -s 2001:470:1f0f:20a::/64 -d ff02::/8 --sport mdns --dport mdns -j ACCEPT

# Allow any that has already been established
-A INPUT -i any -m state --state RELATED,ESTABLISHED -j ACCEPT

# Allow all communications over LAN
-A INPUT -p icmpv6 -s fe80::/10 -d fe80::/10 -j ACCEPT

# Allow all communications over LAN
# Accept all rules for local area network
# Allow RA and other communications on LAN
# Allow Link-Local (fe80::/10) addresses
#fe00::0 ip6-localnet
#ff00::0 ip6-mcastprefix
#ff02::1 ip6-allnodes
#ff02::2 ip6-allrouters
-A INPUT -p tcp    -s fe80::/10 -j ACCEPT
-A INPUT -p udp    -s fe80::/10 -j ACCEPT
-A INPUT -p icmpv6 -s fe80::/10 -j ACCEPT
-A INPUT -p tcp    -s fe00::/10 -j ACCEPT -m comment --comment "ip6-localnet"
-A INPUT -p udp    -s fe00::/10 -j ACCEPT -m comment --comment "ip6-localnet"
-A INPUT -p icmpv6 -s fe00::/10 -j ACCEPT -m comment --comment "ip6-localnet"
-A INPUT -p tcp    -s ff00::/10 -j ACCEPT -m comment --comment "ip6-mcastprefix"
-A INPUT -p udp    -s ff00::/10 -j ACCEPT -m comment --comment "ip6-mcastprefix"
-A INPUT -p icmpv6 -s ff00::/10 -j ACCEPT -m comment --comment "ip6-mcastprefix"
-A INPUT -p tcp    -s ff02::/10 -j ACCEPT -m comment --comment "ip6-allnodes (ff00::1) ip6-allrouters (ff02::2)"
-A INPUT -p udp    -s ff02::/10 -j ACCEPT -m comment --comment "ip6-localnet (ff00::1) ip6-allrouters (ff02::2)"
-A INPUT -p icmpv6 -s ff02::/10 -j ACCEPT -m comment --comment "ip6-localnet (ff00::1) ip6-allrouters (ff02::2)"
# Allow multicast
-A INPUT -d ff00::/8 -j ACCEPT

# When there isn't a match, the default policy (DROP) will be applied.
# To be sure, drop all other ICMPv6 types.
# We're dropping enough icmpv6 types to break RFC compliance.
-A INPUT -j LOGNDROPIN

#--------------------------------------------------------------------------------- OUTPUT
-A OUTPUT -p icmpv6 --icmpv6-type destination-unreachable -j LOG --log-prefix "ICMPV6 DEST UNREACHABLE: " --log-level 3
-A OUTPUT -p icmpv6 -m limit --limit 30/min -j LOG --log-prefix "OUT ICMP6: " --log-level 7
-A OUTPUT -p tcp    -m limit --limit 30/min -j LOG --log-prefix "OUT TCP6: "  --log-level 7
-A OUTPUT -p udp    -m limit --limit 30/min -j LOG --log-prefix "OUT UDP6: "  --log-level 7

#OUT TCP6 Denied: IN= OUT=lo SRC=::1 DST=:1 LEN=80 TC=0 HOPLIMIT=64 FLOWLBL=0 PROTO=TCP SPT=44060 DPT=631 WINDOW=43690 RES=0x00 SYN URGP=0
-A OUTPUT -s ::1 -d ::1 -j ACCEPT
-A OUTPUT -o lo -d ::1/128 -p tcp -j ACCEPT
-A OUTPUT -o lo -d ::1/128 -p udp -j ACCEPT

# Allow ICMPv6 types that should be sent through the Internet.
-A OUTPUT -p icmpv6 --icmpv6-type destination-unreachable -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type packet-too-big -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type time-exceeded -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type parameter-problem -j ACCEPT

# Allow any that has already been established
-A OUTPUT -o any -m state --state RELATED,ESTABLISHED -j ACCEPT

-A OUTPUT -p icmpv6 --icmpv6-type 128 -j ACCEPT
-A OUTPUT -p icmpv6 --icmpv6-type 136 -j ACCEPT

# Allow Link-Local addresses
-A OUTPUT -s fe80::/10 -j ACCEPT
# Allow multicast
-A OUTPUT -d ff00::/8 -j ACCEPT
# Allow RA and other communications on LAN
-A OUTPUT -p icmpv6 -s fe80::/10 -d fe80::/10 -j ACCEPT

-A OUTPUT -j LOGNDROPOUT

#--------------------------------------------------------------------------------- FORWARD
# Reject in the FORWARD chain. This rule is probably not needed
# due to the FORWARD policy.
-A FORWARD -p icmpv6 -j LOG --log-prefix "FORWARD: ICMPv6 type"
-A FORWARD -p tcp    -m limit --limit 15/min -j LOG --log-prefix "FORWARD TCP6: " --log-level 7
-A FORWARD -p udp    -m limit --limit 15/min -j LOG --log-prefix "FORWARD UDP6: " --log-level 7
-A FORWARD -p icmpv6 -m limit --limit 15/min -j LOG --log-prefix "FORWARD ICMP6: " --log-level 7

# Allow any that has already been established
-A FORWARD -i any -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -o any -m state --state ESTABLISHED -j ACCEPT

-A FORWARD -j LOGNDROPFWD

#---------------------------------------------------------------------------------
# --- LOG
-A LOGNDROPIN -p tcp    -m limit --limit 5/min -j LOG --log-prefix "IN TCP6 Denied: "  --log-level 7
-A LOGNDROPIN -p udp    -m limit --limit 5/min -j LOG --log-prefix "IN UDP6 Denied: "  --log-level 7
-A LOGNDROPIN -p icmpv6 -m limit --limit 5/min -j LOG --log-prefix "IN ICMP6 Denied: " --log-level 7

# When there isn't a match, the default policy (DROP) will be applied.
# To be sure, drop all other ICMPv6 types.
# We're dropping enough icmpv6 types to break RFC compliance.
# comment the ACCEPT when all is working
-A LOGNDROPIN -j ACCEPT
# Using REJECT instead of DROP, attackers will attack if they really are determined
-A LOGNDROPIN -j REJECT

# --- LOG
-A LOGNDROPOUT -p tcp    -m limit --limit 5/min -j LOG --log-prefix "OUT TCP6 Denied: "  --log-level 7
-A LOGNDROPOUT -p udp    -m limit --limit 5/min -j LOG --log-prefix "OUT UDP6 Denied: "  --log-level 7
-A LOGNDROPOUT -p icmpv6 -m limit --limit 5/min -j LOG --log-prefix "OUT ICMP6 Denied: " --log-level 7

# comment the ACCEPT when all is working
-A LOGNDROPOUT -j ACCEPT
-A LOGNDROPOUT -j REJECT

# --- LOG
-A LOGNDROPFWD -p tcp    -m limit --limit 5/min -j LOG --log-prefix "FWD TCP6 Denied: "  --log-level 7
-A LOGNDROPFWD -p udp    -m limit --limit 5/min -j LOG --log-prefix "FWD UDP6 Denied: "  --log-level 7
-A LOGNDROPFWD -p icmpv6 -m limit --limit 5/min -j LOG --log-prefix "FWD ICMP6 Denied: " --log-level 7

# comment the ACCEPT when all is working
-A LOGNDROPFWD -j ACCEPT
-A LOGNDROPFWD -j REJECT

#---------------------------------------------------------------------------------
COMMIT
