src/iptablesConverter/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Sun Oct 18 14:38:20 2015
*filter
:INPUT DROP
:FORWARD DROP
:OUTPUT DROP

:LOGNDROPIN  -
:LOGNDROPOUT -
:LOGNDROPFWD -

#==================================================================================== INPUT
-A INPUT -p icmp -m icmp --icmp-type destination-unreachable -j LOG --log-prefix "IN ICMP4 PORT UNREACHABLE: " --log-level 3
-A INPUT -p icmp                                        -m limit --limit 30/min -j LOG --log-prefix "IN ICMP4: " --log-level 7
-A INPUT -p tcp  -m multiport ! --dports ssh,http,https -m limit --limit 30/min -j LOG --log-prefix "IN TCP4: "  --log-level 7
-A INPUT -p tcp  -m multiport ! --sports ssh,http,https -m limit --limit 30/min -j LOG --log-prefix "IN TCP4: "  --log-level 7
-A INPUT -p udp                                         -m limit --limit 30/min -j LOG --log-prefix "IN UDP4: "  --log-level 7

-A INPUT -i any -p tcp --dport 31337 --sport 31337 -j DROP

-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT

# https(tcp/443)
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT -m comment --comment "sport https/tcp"
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT -m comment --comment "dport https/tcp"

-A INPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p tcp  -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp  -m state --state RELATED,ESTABLISHED -j ACCEPT 

# Accept all rules for local area network (i.e. ssh, nfs)
-A INPUT -s 192.168.0.0/16 -d 192.168.0.0/16     -p icmp -j ACCEPT -m comment --comment "LAN ICMP"
-A INPUT -s 192.168.0.0/16 -d 192.168.0.0/16     -p tcp  -j ACCEPT -m comment --comment "LAN TCP"
-A INPUT -s 192.168.0.0/16 -d 192.168.0.0/16     -p udp  -j ACCEPT -m comment --comment "LAN UDP"
-A INPUT -s 0/0            -d 255.255.255.255/24 -p udp  -j ACCEPT -m comment --comment "LAN UDP BROADCAST"
-A INPUT -s 192.168.0.0/16 -d 239.0.0.0/8        -p udp  -j ACCEPT -m comment --comment "LAN UDP MULTICAST"

-A INPUT -j LOGNDROPIN

#==================================================================================== OUTPUT
# NOTE: On 'reject' with icmp-port-unreachable (ICMP type=3, code=3) we want to emphasize it (use '#iptables -p icmp -h' for constants to '--icmp-type')
-A OUTPUT -p icmp -m icmp --icmp-type destination-unreachable -j LOG --log-prefix "OUT ICMP4 PORT UNREACHABLE: " --log-level 3
-A OUTPUT ! -o lo -p icmp                                 -m limit --limit 30/min -j LOG --log-prefix "OUT ICMP4: " --log-level 7
-A OUTPUT ! -o lo -p tcp  -m multiport ! --sports ssh,nfs -m limit --limit 30/min -j LOG --log-prefix "OUT TCP4: "  --log-level 7
-A OUTPUT ! -o lo -p tcp  -m multiport ! --dports ssh,nfs -m limit --limit 30/min -j LOG --log-prefix "OUT TCP4: "  --log-level 7
-A OUTPUT ! -o lo -p udp                                  -m limit --limit 30/min -j LOG --log-prefix "OUT UDP4: "  --log-level 7

# 133t port (DROP instead of REJECT)
-A OUTPUT -o any -p tcp --dport 31337 --sport 31337 -j DROP

#Denied OUT udp: IN= OUT=lo SRC=127.0.0.1 DST=127.0.0.1
-A OUTPUT -o lo -j ACCEPT

# Allow any that has already been established
-A OUTPUT -o any -m state --state ESTABLISHED -j ACCEPT

# Enable following to allow DNS to WAN:
-A OUTPUT -p udp -m udp --dport domain -s 192.168.0.0/16 -j ACCEPT

-A OUTPUT -p tcp --dport git -s 192.168.0.0/16 -j ACCEPT -m comment --comment "git (tcp) to external server"

-A OUTPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp  -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p udp  -m state --state RELATED,ESTABLISHED -j ACCEPT

# Accept all rules for local area network (i.e. ssh, nfs)
-A OUTPUT -s 192.168.0.0/16 -d 192.168.0.0/16 -p icmp -j ACCEPT -m comment --comment "LAN ICMP"
-A OUTPUT -s 192.168.0.0/16 -d 192.168.0.0/16 -p tcp -j ACCEPT -m comment --comment "LAN TCP"
-A OUTPUT -s 192.168.0.0/16 -d 192.168.0.0/16 -p udp -j ACCEPT -m comment --comment "LAN UDP"
-A OUTPUT -s 169.254.0.0/16 -d 169.254.0.0/16 -p udp -j ACCEPT -m comment --comment "LAN UDP"
-A OUTPUT -s 192.168.0.0/16 -d 239.255.0.0/16 -p udp  -j ACCEPT -m comment --comment "LAN UDP"
-A OUTPUT -s 192.168.0.0/16 -d 224.0.0.0/24   -p udp -m udp --dport 5353 -j ACCEPT -m comment --comment "LAN UDP MULTICAST to 5353"
-A OUTPUT -s 192.168.0.0/16 -d 208.180.20.21  -p tcp  -j ACCEPT -m comment --comment "LAN TCP to WAN gateway"
-A OUTPUT -s 192.168.0.0/16 -d 208.180.20.21  -p udp  -j ACCEPT -m comment --comment "LAN UDP to WAN gateway"

-A OUTPUT -j LOGNDROPOUT

#==================================================================================== FORWARD
# 133t port (DROP instead of REJECT)
-A FORWARD -o any -p tcp --dport 31337 --sport 31337 -j DROP

#-A FORWARD -i eth0 -p tcp --dport 80 -d 172.31.0.23 -j ACCEPT
#-A FORWARD -i eth1 -j ACCEPT
#-A FORWARD -o eth1 -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -o lo -j ACCEPT

# Allow any that has already been established
-A FORWARD -i any -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -o any -m state --state ESTABLISHED -j ACCEPT

# Accept all rules for local area network
-A FORWARD -s 192.168.0.0/16 -d 192.168.0.0/16 -p icmp -j ACCEPT -m comment --comment "LAN ICMP"
-A FORWARD -s 192.168.0.0/16 -d 192.168.0.0/16 -p tcp -j ACCEPT -m comment --comment "LAN TCP"
-A FORWARD -s 192.168.0.0/16 -d 192.168.0.0/16 -p udp -j ACCEPT -m comment --comment "LAN UDP"

-A FORWARD -j LOGNDROPFWD

#------------------------------------------------------------------------ LOGGING
#--------------------------------------------- LOG FORWARD -
-A LOGNDROPFWD -p tcp -m  limit --limit 5/min -j LOG --log-prefix "FWD TCP4 Denied: " --log-level 7
-A LOGNDROPFWD -p udp -m  limit --limit 5/min -j LOG --log-prefix "FWD UDP4 Denied: " --log-level 7
-A LOGNDROPFWD -p icmp -m limit --limit 5/min -j LOG --log-prefix "FWD ICMP4 Denied: " --log-level 7

# Comment ACCEPT below if all is well
-A LOGNDROPFWD -j ACCEPT --reject-with icmp-port-unreachable
-A LOGNDROPFWD -j REJECT --reject-with icmp-port-unreachable

#--------------------------------------------- LOG INPUT -
-A LOGNDROPIN -p tcp  -m limit --limit 5/min -j LOG --log-prefix "IN TCP4 Denied: " --log-level 7
-A LOGNDROPIN -p udp  -m limit --limit 5/min -j LOG --log-prefix "IN UDP4 Denied: " --log-level 7
-A LOGNDROPIN -p icmp -m limit --limit 5/min -j LOG --log-prefix "IN ICMP4 Denied: " --log-level 7

# Comment ACCEPT below if all is well
-A LOGNDROPIN -j ACCEPT --reject-with icmp-port-unreachable
-A LOGNDROPIN -j REJECT --reject-with icmp-port-unreachable

#--------------------------------------------- LOG OUTPUT -
-A LOGNDROPOUT -p tcp -m limit --limit 5/min -j LOG --log-prefix "OUT TCP4 Denied: " --log-level 7
-A LOGNDROPOUT -p udp -m limit --limit 5/min -j LOG --log-prefix "OUT UDP4 Denied: " --log-level 7
-A LOGNDROPOUT -p icmp -m limit --limit 5/min -j LOG --log-prefix "OUT ICMP4 Denied: " --log-level 7

# Comment ACCEPT below if all is well
-A LOGNDROPOUT -j ACCEPT --reject-with icmp-port-unreachable
-A LOGNDROPOUT -j REJECT --reject-with icmp-port-unreachable

#------------------------------------------------------------------------ 
COMMIT
# Completed on Sun Oct 18 14:38:20 2015
